Fix hero z-index

--- a/css/style.css
+++ b/css/style.css
@@ -143,16 +143,22 @@ header,
 
 header {
   z-index: 1;
-  min-height: 100vh;
+  min-height: 10vh;
   position: relative;
 }
 
 .nav {
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   gap: 2em;
   justify-content: space-between;
   padding: 1em 2em;
+  /* z-index: 9999; */
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  position: absolute;
   z-index: 9999;
 }
 
@@ -177,6 +183,19 @@ header {
 
 .nav-hamburger {
   font-size: 2rem;
+  position: relative;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: 2;
+  height: max-content;
+}
+
+.nav-hamburger:hover,
+.nav-hamburger:focus {
+  cursor: pointer;
+  color: red;
 }
 
 /* Hero */
@@ -203,13 +222,14 @@ header {
   flex-direction: column;
   align-items: center;
   padding: 20em 2em;
+  z-index: 0;
 }
 
 .hero-content {
   top: 0;
   bottom: 0;
   position: absolute;
-  z-index: 3;
+  z-index: 90;
   padding: 1em;
   display: flex;
   flex-direction: column;
